[gd_scene load_steps=18 format=3 uid="uid://bpnu2ti7oedfr"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_6f1in"]
[ext_resource type="Texture2D" uid="uid://caapnb0djjkg7" path="res://assets/sprites/coin.png" id="1_in3xh"]
[ext_resource type="AudioStream" uid="uid://ct083jjvsqeb2" path="res://assets/sounds/coin.wav" id="3_2ir76"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nlrq"]
atlas = ExtResource("1_in3xh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpkas"]
atlas = ExtResource("1_in3xh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3jjp"]
atlas = ExtResource("1_in3xh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm30p"]
atlas = ExtResource("1_in3xh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_idj6t"]
atlas = ExtResource("1_in3xh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nyrb"]
atlas = ExtResource("1_in3xh")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7b4n"]
atlas = ExtResource("1_in3xh")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r47g"]
atlas = ExtResource("1_in3xh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehddi"]
atlas = ExtResource("1_in3xh")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsvio"]
atlas = ExtResource("1_in3xh")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kshdy"]
atlas = ExtResource("1_in3xh")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0lg7"]
atlas = ExtResource("1_in3xh")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_js7vx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nlrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpkas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3jjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm30p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idj6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nyrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7b4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r47g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehddi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsvio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kshdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0lg7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6yc5"]
radius = 5.0

[node name="Coin" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6f1in")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_js7vx")
autoplay = "default"
frame = 6
frame_progress = 0.459017

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a6yc5")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2ir76")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
